--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </section>
     </section>
 
-    <section>
+    <section class="guac">
         <a href="#"><img src="images/guacamole.png" alt="bowl of salsa with tortilla chips"></a>
         <h3><a href="#">Guacamole</a></h3>
         <p>Fresh and healthy.</p>
@@ -184,7 +184,7 @@
         </section>
     </section>
 
-    <section>
+    <section class="torta">
         <a href="#"><img src="images/tortillas.png" alt="plate of fresh corn tortillas"></a>
         <h3><a href="#">Tortillas</a></h3>
         <p>Easy to make and so good.</p>
