--- a/index.html
+++ b/index.html
@@ -133,73 +133,75 @@
 
 <aside>
     <h2>Need some side dishes?</h2>
-    <section class="rice">
-        <a href="#"><img src="images/mexican-rice.png" alt="bowl of mexican rice"></a>
-        <h3><a href="#">Mexican Rice</a></h3>
-        <p>Traditional recipe with a twist.</p>
-        <section class="rating">
-            <h4>Rating</h4>
-            <dl>
-                <dt>Rating</dt>
-                <dd>4 of 5 stars</dd>
-            </dl>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
-                </svg>
+    <div id="container">
+        <section class="rice">
+            <a href="#"><img src="images/mexican-rice.png" alt="bowl of mexican rice"></a>
+            <h3><a href="#">Mexican Rice</a></h3>
+            <p>Traditional recipe with a twist.</p>
+            <section class="rating">
+                <h4>Rating</h4>
+                <dl>
+                    <dt>Rating</dt>
+                    <dd>4 of 5 stars</dd>
+                </dl>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
+                    </svg>
+            </section>
         </section>
-    </section>
 
-    <section class="salsaS">
-        <a href="#"><img src="images/salsa.png" alt="bowl of salsa with tortilla chips"></a>
-        <h3><a href="#">Salsa</a></h3>
-        <p>Just the right amount of spice.</p>
-        <section class="rating">
-            <h4>Rating</h4>
-            <dl>
-                <dt>Rating</dt>
-                <dd>5 of 5 stars</dd>
-            </dl>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
-                </svg>
+        <section class="salsaS">
+            <a href="#"><img src="images/salsa.png" alt="bowl of salsa with tortilla chips"></a>
+            <h3><a href="#">Salsa</a></h3>
+            <p>Just the right amount of spice.</p>
+            <section class="rating">
+                <h4>Rating</h4>
+                <dl>
+                    <dt>Rating</dt>
+                    <dd>5 of 5 stars</dd>
+                </dl>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
+                    </svg>
+            </section>
         </section>
-    </section>
 
-    <section class="guac">
-        <a href="#"><img src="images/guacamole.png" alt="bowl of salsa with tortilla chips"></a>
-        <h3><a href="#">Guacamole</a></h3>
-        <p>Fresh and healthy.</p>
-        <section class="rating">
-            <h4>Rating</h4>
-            <dl>
-                <dt>Rating</dt>
-                <dd>4 of 5 stars</dd>
-            </dl>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
-                </svg>
+        <section class="guac">
+            <a href="#"><img src="images/guacamole.png" alt="bowl of salsa with tortilla chips"></a>
+            <h3><a href="#">Guacamole</a></h3>
+            <p>Fresh and healthy.</p>
+            <section class="rating">
+                <h4>Rating</h4>
+                <dl>
+                    <dt>Rating</dt>
+                    <dd>4 of 5 stars</dd>
+                </dl>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
+                    </svg>
+            </section>
         </section>
-    </section>
 
-    <section class="torta">
-        <a href="#"><img src="images/tortillas.png" alt="plate of fresh corn tortillas"></a>
-        <h3><a href="#">Tortillas</a></h3>
-        <p>Easy to make and so good.</p>
-        <section class="rating">
-            <h4>Rating</h4>
-            <dl>
-                <dt>Rating</dt>
-                <dd>4 of 5 stars</dd>
-            </dl>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
-                </svg>
+        <section class="torta">
+            <a href="#"><img src="images/tortillas.png" alt="plate of fresh corn tortillas"></a>
+            <h3><a href="#">Tortillas</a></h3>
+            <p>Easy to make and so good.</p>
+            <section class="rating">
+                <h4>Rating</h4>
+                <dl>
+                    <dt>Rating</dt>
+                    <dd>4 of 5 stars</dd>
+                </dl>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
+                    </svg>
+            </section>
         </section>
-    </section>
+    </div>
 </aside>    
 
 <nav>
