med query complete minus food

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         </dl>
     </section>
 
+    <div id="dirents">
     <section class="ingredientSection">
         <h2>Ingredients</h2>
             <ul>
@@ -113,7 +114,7 @@
                 <li>Corn tortillas</li>
             </ul>
     </section>
-
+    
     <section class="directions">
         <h2>DIRECTIONS</h2>
         <ol>
@@ -128,7 +129,8 @@
 
             <li><p>Add toppings: Put the steak in the center of your tortilla with desired toppings.</p></li>
         </ol>
-    </section>    
+    </section>  
+    </div>  
 </main>
 
 <aside>
